--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-zoom-modernizr",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "homepage": "https://github.com/FCOO/leaflet-zoom-modernizr",
   "authors": [
     "NielsHolt"
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "jquery": "latest",
-    "leaflet": "latest"
+    "leaflet": "latest",
+    "modernizr-scss": "https://github.com/FCOO/modernizr-scss.git#latest"
   },
   "devDependencies": {
     "bourbon": "latest",
