--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,13 @@
 {
   "name": "leaflet-zoom-modernizr",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "homepage": "https://github.com/FCOO/leaflet-zoom-modernizr",
   "authors": [
     "NielsHolt"
   ],
   "description": "",
   "main": [
-    "dist/leaflet-zoom-modernizr.min.js"
+    "dist/leaflet-zoom-modernizr.js"
   ],
   "repository": {
     "type": "git",
