--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-zoom-modernizr",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "homepage": "https://github.com/FCOO/leaflet-zoom-modernizr",
   "authors": [
     "NielsHolt"
@@ -16,7 +16,8 @@
   "dependencies": {
     "jquery": "latest",
     "leaflet": "latest",
-    "modernizr-scss": "https://github.com/FCOO/modernizr-scss.git#latest"
+    "modernizr-scss": "https://github.com/FCOO/modernizr-scss.git#latest",
+    "modernizr-javascript": "fcoo/modernizr-javascript#^1.1.0"
   },
   "devDependencies": {
     "bourbon": "latest",
