--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
     "env": {
         "browser": true,
-        "jquery" : true
+        "jquery" : true,
+        "es6"    : true
     },
 
     "extends": "eslint:recommended",
@@ -13,8 +14,6 @@
         "moment"    : false,
         "Raven"     : false
     },
-
-    "allowInlineConfig": true,
 
     "rules": {
         "strict"                  : "error",
