Extend mixin show-and-hide-for-leaflet-zoom-modernizr with parameters $no-display-value: 'none'  and $display-attr: 'display' to allow full control of the generated css

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-zoom-modernizr",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "homepage": "https://github.com/FCOO/leaflet-zoom-modernizr",
   "authors": [
     "NielsHolt"
@@ -16,6 +16,7 @@
   "dependencies": {
     "jquery": "latest",
     "leaflet": "latest",
+    "leaflet-bugfix": "fcoo/leaflet-bugfix#^2.0.2",
     "modernizr-scss": "https://github.com/FCOO/modernizr-scss.git#latest",
     "modernizr-javascript": "fcoo/modernizr-javascript#^1.1.0"
   },
