--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "leaflet-zoom-modernizr",
-  "version": "1.5.1",
+  "version": "1.5.2",
   "homepage": "https://github.com/FCOO/leaflet-zoom-modernizr",
   "authors": [
     "NielsHolt"
@@ -15,8 +15,7 @@
   },
   "dependencies": {
     "jquery": "latest",
-    "leaflet": "latest",
-    "leaflet-bugfix": "fcoo/leaflet-bugfix#^2.0.2",
+    "leaflet-bower-bugfix-switches": "fcoo/leaflet-bower-bugfix-switches#latest",
     "modernizr-scss": "https://github.com/FCOO/modernizr-scss.git#latest",
     "modernizr-javascript": "fcoo/modernizr-javascript#^1.1.0"
   },
